# SKN21-FINAL-5TEAM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  analyze_dataset.py  ap.html  categories.txt  detected_categories.json  detected_categories.py  docker-compose.yml  extract_schemas.py  main.py  nginx.conf  nginx.https.conf  package-lock.json  package.json  pyproject.toml  setup_db.py  system_architecture.md.resolved  test_tools.py  tmp_clip_inspect.py  tmp_clip_test.py  tmp_list.py  tmp_task_inspect.py
.agent/rules/: project_rules.md
SaaS/: README.md
SaaS/docs/: saas_analysis.md  saas_analysis_kor.md
bilyeo/: README.md  site-manifest.json  site_analysis.md  사이트 설명.md
bilyeo/backend/: app.py  chat_auth.py  config.py  env_bootstrap.py  requirements.txt
bilyeo/frontend/: index.html  package-lock.json  package.json  vite.config.js
bilyeo/scripts/: faq_crawling.py  image_usage.json  product_crawling.py  reset_db.py  seed.py
bilyeo/tests/: test_env_bootstrap.py  test_preview_cors.py  test_product_crawling.py
chatbot/: FASTAPI_SERVER_RUNBOOK.md  README.md  server_fastapi.py
chatbot/benchmark/: DATASET_GENERATION_GUIDE.md  EVALUATION_GUIDE.md  LOGGING_GUIDE.md  build_dataset.py
chatbot/scripts/: run_generator_eval.py  run_onboarding_generation.py  run_slack_socket_gateway.py
chatbot/src/: __init__.py  _module_alias.py  capability_profiles.py  evaluation_adapter.py  runtime_auth.py
chatbot/tests/: test_adapter_registry_tool_contract.py  test_auth_header_strategies.py  test_brand_prompt_profiles.py  test_capability_profiles.py  test_chat_runtime_core_imports.py  test_chat_site_routing.py  test_conversation_logger.py  test_discovery_eval.py  test_ecommerce_widget_host_mount.py  test_exchange_tool_routing.py  test_final_generator.py  test_food_adapter_order_tools.py  test_guardrail_startup.py  (+21 more)
docs/: RUNPOD_VLLM_DEPLOY.md  moyeo_test_plan.md  onboarding-v2-beginner-guide.md
ecommerce/: README.md  site-manifest.json  site_analysis.md
food/: README.md  site-manifest.json  site_analysis.md
onmo/: README.md  __init__.py  app.py  dashboard.py  github_imports.py
presentation/: viewer.html
scripts/: chatbot_log_index.py  chatbot_log_to_html.py  eval.py  reset_db.py  seed.py  seed_db.py
tests/: conftest.py  test_chat_session_logging.py  test_chatbot_log_to_html.py  test_graph_v2.py  test_safety.py  test_selection_ui.py
(+1254 files in other folders)
