[project]
name = "skn21-final-5team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-core>=1.2.8",
    "langgraph>=1.0.7",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
]
