[project]
name = "skn21-final-5team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.2",
    "cryptography>=46.0.4",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "flashrank>=0.2.10",
    "itsdangerous>=2.2.0",
    "langchain-core>=1.2.8",
    "langgraph>=1.0.7",
    "langsmith>=0.6.8",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
]
